--- a/standing.html
+++ b/standing.html
@@ -25,6 +25,66 @@
             </div>
 
     		<div class="content">
+                <h2 class="standing-header">Omgång 4 (22-10-18)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Pär Sjöbom</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Mikael Eliasson</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>0</p>
+                        </div>                
+                    </div>
+                </div>
+
+                <hr>
+
+                <h2 class="standing-header">Slutställning omgång 3 (22-10-18)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p><strong>Fredrik Lassfolk & Mikael Eliasson</strong></p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Pär Sjöbom</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>5</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>0</p>
+                        </div>                
+                    </div>
+                </div>
+
                 <h2 class="standing-header">Omgång 3 (22-10-01)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
