--- a/rules.html
+++ b/rules.html
@@ -29,11 +29,11 @@
                     <p><strong>Regler</strong><br/>
                         Tre kortlekar plus sex stora jokrar, alla tvåor är joker.<br/>
                         Varje spelare får femton kort.<br/>
-                        Man plockar 2 kort plus 1 kort för varje röd 3:a i tur och ordning.<br/>
+                        Man plockar 2 kort, plus 1 kort för varje röd 3:a man får upp eller har på hand, i tur och ordning.<br/>
                         Öppningen ska läggas i minst en triss och enligt reglerna under avsnittet Öppning.<br/>
                         Utlagda kortserier får aldrig bestå av övervägande eller lika del jokrar.<br/>
                         Svart 3:a låser högen för nästa spelare.<br/>
-                        Medspelaren får i sin tur bygga på de utlagda korten så man får minst 2 olika canastor. En svart och en röd.<br/>
+                        Medspelaren får i sin tur bygga på de utlagda korten så man får minst 2 olika canastor. En svart med jokrar och en röd utan jokrar.<br/>
                         Vill någon ta de 10 översta korten i högen måste man själv ha 2 lika kort på hand som det kort som ligger överst. Därefter ska det gå en runda innan man får utnyttja resterande nio kort.<br/>
                         För att avsluta ska man ha minst 2 olika canastor utlagda på bordet samt ha slut på kort på hand när det sista sakas i högen.<br/>
                         Om näst sista kortet vid avslut gör en canasta, dubblas poängen för den.<br/><br/>
@@ -53,7 +53,7 @@
                         Röd 3:a: 100 poäng om Canasta finns, annars -100 poäng<br/>
                         Röd canasta, 7 rena kort: 700 poäng<br/>
                         Svart canasta, 4-6 kort och resten jokrar: 400 poäng<br/>
-                        Svart 3:a på hand efter utgång, böter minus 100 poäng<br/><br/>
+                        Svart 3:a på hand efter utgång, -100 poäng<br/><br/>
                         <strong>Först till 10 000 har vunnit eller om båda lagen passerar 10 000, det lag som kommer högst.</strong>
                     </p>
                 </div>
