--- a/standing.html
+++ b/standing.html
@@ -25,7 +25,36 @@
             </div>
 
     		<div class="content">
-                <h2 class="standing-header">Omgång 5 (28-12-06)</h2>
+                <h2 class="standing-header">Sluställning omgång 5 (22-12-17)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p><strong>Fredrik Lassfolk & Mikael Eliasson</strong></p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Pär Sjöbom</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>5</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2</p>
+                        </div>                
+                    </div>
+                </div>
+
+                <h2 class="standing-header">Omgång 5 (22-12-06)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
@@ -54,7 +83,7 @@
                     </div>
                 </div>
 
-                <h2 class="standing-header">Omgång 5 (28-11-17)</h2>
+                <h2 class="standing-header">Omgång 5 (22-11-17)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
