--- a/standing.html
+++ b/standing.html
@@ -33,6 +33,35 @@
                             <p>1.</p>
                         </div>
                         <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Mikael Eliasson</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Pär Sjöbom</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>2</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>1</p>
+                        </div>                
+                    </div>
+                </div>
+
+                <h2 class="standing-header">Omgång 6 (23-01-12)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
                             <p>1.</p>
                         </div>                       
                     </div>
