--- a/standing.html
+++ b/standing.html
@@ -25,6 +25,35 @@
             </div>
 
     		<div class="content">
+                <h2 class="standing-header">Omgång 7 (14-04-17)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Pär Sjöbom & Mikael Eliasson</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Fredrik Lassfolk</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>5</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>4</p>
+                        </div>                
+                    </div>
+                </div>
+
                 <h2 class="standing-header">Omgång 7 (14-04-09)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
