--- a/standing.html
+++ b/standing.html
@@ -24,8 +24,68 @@
                 </div>              
             </div>
 
+
     		<div class="content">
-                <h2 class="standing-header">Omgång 7 (14-04-17)</h2>
+                <h2 class="standing-header">Omgång 8 (23-05-10)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Pär Sjöbom</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Mikael Eliasson</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>0</p>
+                        </div>                
+                    </div>
+                </div>
+
+                <hr>
+
+                <h2 class="standing-header">Slutställning omgång 7 (23-05-10)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Pär Sjöbom & Mikael Eliasson</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Fredrik Lassfolk</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>6</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>4</p>
+                        </div>                
+                    </div>
+                </div>
+                <h2 class="standing-header">Omgång 7 (23-04-17)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
@@ -54,7 +114,7 @@
                     </div>
                 </div>
 
-                <h2 class="standing-header">Omgång 7 (14-04-09)</h2>
+                <h2 class="standing-header">Omgång 7 (23-04-09)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
@@ -83,7 +143,7 @@
                     </div>
                 </div>
 
-                <h2 class="standing-header">Omgång 7 (14-04-05)</h2>
+                <h2 class="standing-header">Omgång 7 (23-04-05)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
@@ -112,7 +172,7 @@
                     </div>
                 </div>
 
-                <h2 class="standing-header">Omgång 7 (14-03-02)</h2>
+                <h2 class="standing-header">Omgång 7 (23-03-02)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
@@ -141,7 +201,7 @@
                     </div>
                 </div>
 
-                <h2 class="standing-header">Omgång 7 (14-03-02)</h2>
+                <h2 class="standing-header">Omgång 7 (23-03-02)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
                     <div class="standing">
