--- a/standing.html
+++ b/standing.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="standing">
                         <div class="standing-inner">
-                            <p>Pär Sjöbom & Mikael Eliasson</p>
+                            <p><strong>Pär Sjöbom & Mikael Eliasson</strong></p>
                         </div>
                         <div class="standing-inner">
                             <p>Niklas Arvidsson & Fredrik Lassfolk</p>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="standing">
                         <div class="standing-inner">
-                            <p>Niklas Arvidsson & Mikael Eliasson</p>
+                            <p><strong>Niklas Arvidsson & Mikael Eliasson</strong></p>
                         </div>
                         <div class="standing-inner">
                             <p>Fredrik Lassfolk & Pär Sjöbom</p>
@@ -481,7 +481,7 @@
                     </div>
                     <div class="standing">
                         <div class="standing-inner">
-                            <p>Fredrik Lassfolk & Pär Sjöbom</p>
+                            <p><strong>Fredrik Lassfolk & Pär Sjöbom</strong></p>
                         </div>
                         <div class="standing-inner">
                             <p>Niklas Arvidsson & Mikael Eliasson</p>
