--- a/standing.html
+++ b/standing.html
@@ -24,8 +24,38 @@
                 </div>              
             </div>
 
+                
 
     		<div class="content">
+                <h2 class="standing-header">Omgång 8 (23-07-10)</h2>
+                <h3 class="standing-header">Först till fem (vinna med 2)</h3>
+                <div class="standing-holder">
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>1.</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>2.</p>
+                        </div>                       
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>Niklas Arvidsson & Pär Sjöbom</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>Fredrik Lassfolk & Mikael Eliasson</p>
+                        </div>
+                    </div>
+                    <div class="standing">
+                        <div class="standing-inner">
+                            <p>4</p>
+                        </div>
+                        <div class="standing-inner">
+                            <p>3</p>
+                        </div>                
+                    </div>
+                </div>
+
                 <h2 class="standing-header">Omgång 8 (23-06-20)</h2>
                 <h3 class="standing-header">Först till fem (vinna med 2)</h3>
                 <div class="standing-holder">
